Finally renders correctly on mobile.

--- a/gutenberg/gutenberg.scss
+++ b/gutenberg/gutenberg.scss
@@ -11,13 +11,17 @@
   font-family: 'MinionProBoldItalic';
   src: url("/fonts/MinionProBoldItalic.woff"); }
 
+html {
+  overflow: hidden;
+}
+
 body {
   overflow: hidden;
   margin: 0;
   padding: 0;
 
   font-family: MinionPro;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .textFormat {
@@ -27,9 +31,14 @@ body {
 
 .page {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  position: absolute;
-  left: 0; top: 0;
-  right: 0; bottom: 0;
+  overflow: hidden;
+}
+
+// Trick to make the last line justify correctly.
+.page:after {
+  content: "";
+  display: inline-block;
+  width: 100%;
 }
 
 .page.dark {
